syntax = "proto3";

package optional_empty;

message Empty {

}

message Foo {
  optional Empty empty = 1;
}
